[tool.poetry]
name = "eq3btsmart"
version = "0.0.0"
description = ""
authors = ["David Buezas, Lennard Beers"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
homeassistant = "^2024.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
