[tool.poetry]
name = "eq3btsmart"
version = "0.0.0"
description = ""
authors = ["David Buezas, Lennard Beers"]
readme = "README.md"
repository = "https://github.com/dbuezas/eq3btsmart"
packages = [
    { include = "eq3btsmart" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
bleak = "^0.21.1"
construct = "^2.10.68"
construct-typing = "^0.6.2"
homeassistant = "^2023.1.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
homeassistant-stubs = "^2023.1.1"
voluptuous-stubs = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
explicit_package_bases = true
